--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Hey</title>
+	<title>Welcome!</title>
 </head>
 <body>
-	<h1>sup</h1>
+	<h1>Hi</h1>
 </body>
 </html>
