--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+		<link rel="icon" 
+      type="image/png" 
+      href="http://rs1101.pbsrc.com/albums/g424/tutorialsandmore/favicons/icons22.gif~c200">
     <title>np-chan~*</title>
 
     <!-- Bootstrap core CSS -->
@@ -36,8 +38,8 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-white mb-5">She is super excited to help you share you favorite songs with your friends! Click below to view the source code.</p>
-            <a class="btn btn-info btn-xl js-scroll-trigger" href="https://github.com/jeremyleitmeyer/npbot">np-chan on Github</a>
+            <p class="text-white mb-5">np-chan is a Discord/IRC bot that listens for the "/np" command in osu and relays that info to your Discord channel. She is super excited to help you share you favorite songs with your friends! Click below to view the source code.</p>
+            <a class="btn btn-info btn-xl js-scroll-trigger" href="https://github.com/jeremyleitmeyer/npbot" target="blank">np-chan on Github</a>
           </div>
         </div>
       </div>
