--- a/views/index.html
+++ b/views/index.html
@@ -40,6 +40,7 @@
           <div class="col-lg-8 mx-auto">
             <p class="text-white mb-5">np-chan is a Discord/IRC bot that listens for the "/np" command in osu and relays that info to your Discord channel. She is super excited to help you share you favorite songs with your friends! Click below to view the source code.</p>
             <a class="btn btn-info btn-xl js-scroll-trigger" href="https://github.com/jeremyleitmeyer/npbot" target="blank">np-chan on Github</a>
+           <a class="btn btn-info btn-xl js-scroll-trigger" href="/np-chan">About np-chan</a>
           </div>
         </div>
       </div>
