--- a/views/post.html
+++ b/views/post.html
@@ -40,6 +40,7 @@
           <div class="col-lg-8 mx-auto">
             <p class="text-white mb-5">The way this bot works, a separate IRC chat bot in the game osu! receives a command (/np) and returns a song in game. Our IRC bot takes the data from the game and posts to np-chan with a JSON object. np-chan parses the JSON and puts it into an embed object within your Discord channel. Now your friends can see and download what song you are listening to in osu!</p>
           </div>
+          <a class="btn btn-info btn-xl js-scroll-trigger" href="/np-chan">Back</a>
         </div>
       </div>
     </header>
